<resources>
    <string name="app_name">EBooker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_profile_edit">Edytuj profil</string>
    <string name="logout">Wyloguj</string>
    <string name="menu_profile">Zobacz profil</string>
    <string name="no_book_data_to_show">Brak książek do wyświetlenia</string>
    <string name="no_review_data_to_show">Ta pozycja nie ma jeszcze recenzji</string>
    <string name="no_quotation_data_to_show">Ta pozycja nie posiada jeszcze wyróżnionych cytatów</string>
    <string name="profile_edit_button">Edytuj profil</string>
    <string name="profile_change_password">Zmień hasło</string>
    <string name="profile_delete_account">Usuń konto</string>
    <string name="Confirm">Tak</string>
    <string name="delete_dialog_confirmation">Twoje dane zostaną utracone bezpowrotnie, czy jesteś pewien?</string>
    <string name="Dialog_cancel">Anuluj</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_books_title">Ksiażki</string>
    <string name="navigation_library">Biblioteka</string>
    <string name="navigation_book_search">Wyszukaj</string>
    <string name="navigation_quotes_title">Cytaty</string>
    <string name="navigation_user_quotes">Moje cytaty</string>
    <string name="navigation_book_quotes">Inne</string>
    <string name="navigation_others_title">Pozostałe</string>
    <string name="navigation_news">Aktualności</string>
    <string name="navigation_profile">Profil</string>
    <string name="navigation_settings">Ustawienia</string>
    <string name="navigation_logout">Wyloguj</string>
    <string name="navigation_menu">Menu</string>
    <string name="thumbnail">thumbnail</string>
    <string name="reading_now_header">Właśnie czytam</string>
    <string name="to_read_header">Do przeczytania</string>
    <string name="favourites_header">Ulubione</string>
    <string name="have_read_header">Przeczytane</string>
    <string name="purchased_header">Zakupione</string>
    <string name="ebooks_header">Ebooki</string>
    <string name="reviewed_header">Zrecenzowane</string>
    <string name="recommendations_header">Rekomendacje</string>
    <string name="recently_viewed_header">Ostatnio przeglądane</string>
    <string name="no_books_to_show">Brak książek na liście</string>
    <string name="reading_description">Reading book list</string>
    <string name="to_read_description">To read book list</string>
    <string name="favourites_description">Favourites book list</string>
    <string name="have_read_description">Have read book list</string>
    <string name="purchased_description">Purchased book list</string>
    <string name="e_books_description">EBooks book list</string>
    <string name="reviewed_description">Reviewed book list</string>
    <string name="recommendations_description">Recommendations book list</string>
    <string name="recently_viewed_description">Recently viewed book list</string>
    <string name="nav_library_header">Biblioteka</string>
    <string name="nav_quotes_header">Biblioteka</string>
    <string name="nav_reviews_header">Opinie</string>
    <string name="nav_settings_header">Ustawienia</string>
    <string name="nav_book_search">Wyszukaj</string>
    <string name="show_more_options">Więcej opcji</string>
    <string name="book_detail_cover">Zdjęcie</string>
    <string name="no_description">Brak opisu</string>

    <string-array name="shelves">
        <item>Ulubione</item>
        <item>Zakupione</item>
        <item>Do przeczytania</item>
        <item>Właśnie czytam</item>
        <item>Przeczytane</item>
        <item>Zrecenzowane</item>
        <item>Ostatnio przeglądane</item>
        <item>Ebooki</item>
        <item>Rekomendacje</item>
    </string-array>

    <string name="full_scale_cover">Okładka</string>
    <string name="add_to_favourites">Dodaj do ulubionych</string>
    <string name="remove_from_favourites">Usuń z ulubionych</string>
    <string name="add_to_have_read">Oznacz jako przeczytaną</string>
    <string name="remove_from_have_read">Oznacz jako nieprzeczytaną</string>
    <string name="add_to_to_read">Dodaj do przeczytania</string>
    <string name="remove_from_to_read">Usuń z listy do przeczytania</string>
    <string name="show_quotes">Zobacz cytaty</string>
    <string name="show_reviews">Zobacz opinie</string>
    <string name="read_as_epub">Czytaj (epub)</string>
    <string name="read_as_pdf">Czytaj (pdf)</string>
    <string name="add_comment">Dodaj komentarz..</string>
    <string name="add_review">Dodaj opinię</string>
    <string name="rating_text">%1$s/5</string>
    <string name="set_rating">Dodaj ocenę</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="favourite_option_icon">Favourite option icon</string>
    <string name="have_read_option_icon">Have read option icon</string>
    <string name="to_read_option_icon">To read option icon</string>
    <string name="quotes_option_icon">Quotes option icon</string>
    <string name="reviews_option_icon">Reviews option icon</string>
    <string name="add_review_option_icon">Add review option icon</string>

    <string name="list_visibility_header">Biblioteka</string>
    <string name="favourites_summary_on">Pokazuj listę ulubionych</string>
    <string name="favourites_summary_off">Nie pokazuj listy ulubionych</string>
    <string name="reading_now_summary_on">Pokazuj listę obecnie czytanych</string>
    <string name="reading_now_summary_off">Nie pokazuj listy obecnie czytanych</string>
    <string name="to_read_summary_on">Pokazuj listę do przeczytania</string>
    <string name="to_read_summary_off">Nie pokazuj listy do przeczytania</string>
    <string name="have_read_summary_on">Pokazuj listę przeczytanych</string>
    <string name="have_read_summary_off">Nie pokazuj listy przeczytanych</string>
    <string name="purchased_summary_on">Pokazuj listę zakupionych</string>
    <string name="purchased_summary_off">Nie pokazuj listy zakupionych</string>
    <string name="ebooks_summary_on">Pokazuj listę eBooków</string>
    <string name="ebooks_summary_off">Nie pokazuj listy eBooków</string>
    <string name="reviewed_summary_on">Pokazuj listę zrecenzowanych</string>
    <string name="reviewed_summary_off">Nie pokazuj listy zrecenzowanych</string>
    <string name="recommendations_summary_on">Pokazuj listę polecanych</string>
    <string name="recommendations_summary_off">Nie pokazuj listy polecanych</string>
    <string name="recently_viewed_summary_on">Pokazuj listę ostatnio przeglądanych</string>
    <string name="recently_viewed_summary_off">Nie pokazuj listy ostatnio przeglądanych</string>
    <string name="transition_image_to_full_scale">image_to_full_scale</string>
    <string name="transition_full_scale_to_image">full_scale_to_image</string>
</resources>
