<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_books"
        app:showAsAction="always"
        android:icon="@drawable/books"
        android:title="@string/navigation_books">
    </item>
    <item
        android:id="@+id/navigation_user_quotes"
        app:showAsAction="always"
        android:icon="@drawable/userquotes"
        android:title="@string/navigation_user_quotes">
    </item>
    <item
        android:id="@+id/navigation_books_quotes"
        app:showAsAction="always"
        android:icon="@drawable/bookquotes"
        android:title="@string/navigation_book_quotes">
    </item>
    <item
        android:id="@+id/navigation_news"
        app:showAsAction="always"
        android:icon="@drawable/news"
        android:title="@string/navigation_news">
    </item>
    <item
        android:id="@+id/navigation_menu"
        app:showAsAction="always"
        android:icon="@drawable/menu"
        android:title="@string/navigation_menu">
    </item>

</menu>




