<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.issen.ebooker.bookDetail.BookDetailViewModel" />

        <variable
            name="listener"
            type="com.issen.ebooker.bookDetail.BookDetailDialogListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:orientation="vertical"
        tools:context=".bookDetail.BookDetailDialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{() -> listener.toggleFavourite()}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/favourite_option_icon"
                android:padding="@dimen/spacing_small"
                android:scaleType="centerInside"
                android:src="@{viewModel.isFavourite? @drawable/ic_favourite : @drawable/ic_favourite_remove}"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@{viewModel.isFavourite? @string/remove_from_favourites : @string/add_to_favourites }"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{() -> listener.toggleHaveRead()}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/have_read_option_icon"
                android:padding="@dimen/spacing_small"
                android:scaleType="centerInside"
                android:src="@{viewModel.haveRead? @drawable/ic_have_read : @drawable/ic_have_read_remove}"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@{viewModel.haveRead? @string/remove_from_have_read : @string/add_to_have_read }"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{() -> listener.toggleToRead()}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/to_read_option_icon"
                android:padding="@dimen/spacing_small"
                android:scaleType="centerInside"
                android:src="@{viewModel.isToRead? @drawable/ic_to_read : @drawable/ic_to_read_remove}"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@{viewModel.isToRead? @string/remove_from_to_read : @string/add_to_to_read }"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{() -> listener.showQuotes(viewModel.book.bookId)}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/quotes_option_icon"
                android:padding="@dimen/spacing_small"
                android:scaleType="centerInside"
                android:src="@drawable/ic_quotes"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@string/show_quotes"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{() -> listener.showReviews(viewModel.book.bookId)}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/reviews_option_icon"
                android:padding="@dimen/spacing_small"
                android:scaleType="centerInside"
                android:src="@drawable/ic_rating"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@string/show_reviews"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:onClick="@{() -> listener.addReview(viewModel.book.bookId)}"
            android:orientation="horizontal"
            android:visibility="@{viewModel.reviewedByUser ? View.GONE : View.VISIBLE}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/add_review_option_icon"
                android:padding="@dimen/spacing_small"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add_rating"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@string/add_review"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>
</layout>